# ontology-hub

./: .env.example  .gitignore  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_full_schema.py  001_initial_schema.py  002_dashboard_resource.py  002_entity_unique_constraint.py  003_draft_diff_preview.py  003_resource_multi_category.py  004_draft_change_unique_constraint.py  004_draft_validation_results.py  005_v2_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/dependencies/: __init__.py  capability.py  rate_limit.py
backend/app/models/: __init__.py  draft.py  entity.py  module.py
backend/app/routers/: __init__.py  draft_changes.py  drafts.py  drafts_v2.py  entities.py  entities_v2.py  graph.py  mediawiki_import.py  modules.py  oauth.py  sync.py  versions.py  webhooks.py
backend/app/schemas/: __init__.py  draft.py  draft_change.py  draft_v2.py  entity.py  entity_v2.py  graph.py  mediawiki_import.py  validation.py  validation_v2.py
backend/app/services/: __init__.py  draft_diff.py  draft_overlay.py  draft_rebase.py  draft_workflow.py  github.py  graph_query.py  (+10 more)
backend/tests/: conftest.py  test_capability.py  test_draft_crud_dashboard_resource.py  test_drafts_api.py  test_entities_api.py  test_media_endpoint.py  test_module_derived.py  test_modules_api.py  test_pr_builder.py  test_rate_limiting.py  test_versions_api.py  test_webhook.py  test_wikitext_parser.py
(+505 files in other folders)
